# shipyard

./: .gitignore  Makefile  README.md  install.sh  pyproject.toml
config/: project.yml  projects.yml
shipyard/: adopt.py  banner.py  certs.py  cli.py  docker.py  init.py  paths.py  projects.py  templates.py  traefik.py  utils.py
templates/project/: docker-compose.generated.yml  shipyard.yml
templates/project/docker/php/: Dockerfile
templates/project/nginx/: default.conf
templates/project/php/: local.ini  www.conf
templates/project/support/: vite.config.js
templates/runtime/: docker-compose.yml
templates/traefik/: traefik.yml
templates/traefik/dynamic/: shipyard-core-tls.yml
